# ProjectUniversity

./: .gitignore  pyproject.toml  req.txt
api/: admin.py  choices.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_message_alter_employee_status.py  0003_alter_employee_options_alter_management_options_and_more.py  0004_alter_employee_status_alter_message_status.py  0005_alter_employee_status_alter_message_status.py  0006_employee_description_alter_new_title.py  0007_event_alter_employee_description.py  0008_alter_event_photo.py  0009_guestlecture.py
core/: settings.py  urls.py
utils/: chack_auth.py  middlewares.py  pagination.py  redis.py  responses.py
